--- a/arch/arm64/configs/recovery-m21xx_defconfig
+++ b/arch/arm64/configs/recovery-m21xx_defconfig
@@ -1,4 +1,4 @@
-  #
+#
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 4.14.113 Kernel Configuration
 #
@@ -3774,6 +3774,7 @@ CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
 # CONFIG_USB_OLD_CONFIGFS is not set
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
+# CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
 CONFIG_USB_DUN_SUPPORT=y
 # CONFIG_USB_RNDIS_MULTIPACKET_WITH_TIMER is not set
 CONFIG_USB_NCM_SUPPORT_MTU_CHANGE=y
