9611: arm64: Configure DTB/O generation
For unknown reason Samsung disable the generation of DTB/O. The DTS is exist, and almost all Exynos 9611 devices.

This commit enable the generation based on each target device by adding target config in Kconfig.

--- a/arch/arm64/boot/dts/samsung/Makefile
+++ b/arch/arm64/boot/dts/samsung/Makefile
@@ -1,8 +1,25 @@
 # SPDX-License-Identifier: GPL-2.0
-#dtb-$(CONFIG_SOC_EXYNOS9610) += \
-#	exynos9610-universal9610.dtbo \
-#	exynos9611-universal9611.dtbo
 
-# always		:= $(dtb-y) $(dtbo-y)
+dtbo-$(CONFIG_EXYNOS9611_A51) += \
+	exynos9611-a51_eur_open_00.dtbo \
+	exynos9611-a51_eur_open_01.dtbo \
+	exynos9611-a51_eur_open_03.dtbo \
+	exynos9611-a51_eur_open_07.dtbo
+
+dtbo-$(CONFIG_EXYNOS9611_F41) += \
+	exynos9611-f41_swa_open_00.dtbo
+
+dtbo-$(CONFIG_EXYNOS9611_M21) += \
+	exynos9611-m21_swa_open_00.dtbo \
+	exynos9611-m21_swa_open_06.dtbo
+
+dtbo-$(CONFIG_EXYNOS9611_M31) += \
+	exynos9611-m31_eur_open_00.dtbo \
+	exynos9611-m31_eur_open_01.dtbo
+
+dtbo-$(CONFIG_EXYNOS9611_M31S) += \
+	exynos9611-m31s_eur_open_00.dtbo
+
+always		:= $(dtbo-y)
 subdir-y	:= $(dts-dirs)
-clean-files	:= *.dtb *.dtbo
+clean-files	:= *.dtbo
