--- a/arch/arm64/boot/dts/exynos/Makefile
+++ b/arch/arm64/boot/dts/exynos/Makefile
@@ -5,10 +5,7 @@ dtb-$(CONFIG_ARCH_EXYNOS) += \
 	exynos7-espresso.dtb
 
 dtb-$(CONFIG_SOC_EXYNOS9610) += exynos9610.dtb
-dtb-$(CONFIG_SOC_EXYNOS9610) += \
-	exynos9610-universal9610.dtbo \
-	exynos9611-universal9611.dtbo
 
-#always		:= $(dtb-y) $(dtbo-y)
+always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
-clean-files	:= *.dtb *.dtbo
+clean-files	:= *.dtb
