--- a/arch/arm64/configs/recovery-m21xx_defconfig
+++ b/arch/arm64/configs/recovery-m21xx_defconfig
@@ -418,6 +418,11 @@ CONFIG_ARCH_EXYNOS=y
 # Samsung Exynos
 #
 CONFIG_SOC_EXYNOS9610=y
+# CONFIG_EXYNOS9611_A51 is not set
+# CONFIG_EXYNOS9611_F41 is not set
+CONFIG_EXYNOS9611_M21=y
+# CONFIG_EXYNOS9611_M31 is not set
+# CONFIG_EXYNOS9611_M31S is not set
 CONFIG_ARCH_EXYNOS9=y
 
 #
